# fuzzy-chat

./: .dockerignore  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
assets/: members.csv
assets/certs/: ca.crt  ca.key  server.crt  server.key
assets/certs/client/: ca.crt  ca.key  server.crt  server.key
assets/certs/docker-compose/: ca.crt  ca.key  ca.srl  dc.csr  dc.ext  server.crt  server.key
assets/certs/proxy/: ca.crt  ca.key  server.crt  server.key
assets/scripts/: generate_certs.sh  generate_multiple_certs.sh
authorization/: Cargo.toml  build.rs
authorization/src/: auth_client.rs  lib.rs
client/: Cargo.toml  build.rs
client/.cargo/: config1.toml  config2.toml  config3.toml
client/src/: command.rs  main.rs  models.rs
client/src/services/: landing_service.rs  mod.rs
controller/: Cargo.toml  build.rs
controller/.cargo/: config.toml
controller/src/: main.rs  membership.rs  models.rs  routing.rs  session.rs
controller/src/services/: auth_service.rs  info_service.rs  mod.rs  route_service.rs
controller/src/storage/: mod.rs
controller/src/storage/inmemory/: member_repository.rs  mod.rs  route_repository.rs  session_repository.rs
controller/src/storage/redis/: member_repository.rs  mod.rs  route_repository.rs  session_repository.rs
crosscutting/: Cargo.toml
crosscutting/src/: abstractions.rs  lib.rs  networking.rs  settings.rs  tracing.rs
crosscutting/src/settings/: auth.rs  environment.rs  logging.rs  mod.rs  service.rs
crosscutting/tests/: auth_tests.rs  environment_tests.rs  networking_tests.rs  service_tests.rs
docker/: Client-Dockerfile  Controller-Dockerfile  Proxy-Dockerfile  docker-compose.yaml
gateway/: Cargo.toml  build.rs
gateway/src/: auth.rs  lib.rs  proxy_client.rs
proto/: auth.proto  client.proto  info.proto  proxy.proto  route.proto
proxy/: Cargo.toml  build.rs
proxy/.cargo/: config1.toml  config2.toml
proxy/src/: main.rs  models.rs
proxy/src/clients/: info_client.rs  landing_client.rs  mod.rs
proxy/src/services/: mod.rs  proxy_service.rs
routing/: Cargo.toml  build.rs
routing/src/: lib.rs  proxy_client.rs  route_client.rs
