[package]
name = "controller"
version.workspace = true
edition.workspace = true

[dependencies]
crosscutting = { path = "../crosscutting" }
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = "0.7.15"
tonic = { version = "0.13.0", features = ["tls-ring", "prost"] }
uuid = { version = "1.6", features = ["v4"] }
prost = "0.13.0"
tokio-rustls = "0.24.1"
rustls = "0.21.7"
rustls-pemfile = "1.0.3"
protoc-rust = "2.28.0"
chrono = "0.4"
log = "0.4.27"
rand = "0.9.0"
serde = "1.0.219"
serde_json = "1.0.140"
redis = { version = "0.30.0", features = ["json"] }
csv = "1.3.1"
mockall = "0.13.0"

[build-dependencies]
tonic-build = { version ="0.13.0", features = ["prost"] }
protoc-rust = "2"