[package]
name = "routing"
version.workspace = true
edition.workspace = true

[dependencies]
crosscutting = { path = "../crosscutting" }
tokio = { version = "1.36.0", features = ["full"] }
tonic = { version = "0.13.0", features = ["channel", "tls-ring", "prost"] }
prost = "0.13.0"
protoc-rust = "2.28.0"
mockall = "0.13.0"

[build-dependencies]
tonic-build = { version ="0.13.0", features = ["prost"] }
protoc-rust = "2"